test-crates/duchess-java-tests/tests/ui/mismatched_flags_private_method_declared_as_public.stderr
error: error in class `flags.Flags`: member declared as `public` but it is `private` in Java, which appears in method `privateMethod()`
 --> $DIR/mismatched_flags_private_method_declared_as_public.rs:4:5
  |
4 |     public class flags.Flags {
  |     ^^^^^^

error: aborting due to 1 previous error

